--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -1,6 +1,12 @@
 <h2>Create New Landmark</h2>
 
 <!-- add content here -->
+<form method='POST' action='/landmarks/<%= @landmark.id %>'>
+  <input type='text' name='landmark_name' id='landmark[name]'><br>
+  <input type='text' name='landmark_year_completed' id='landmark[year_completed]'><br>
+  <input type='submit' id='Create New Landmark'>
+</form>
+
 
 <a class="button" href="/figures">Landmarks</a>
 <a class="button" href="/">Home</a>
