--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -1,6 +1,12 @@
 <h2>Edit Historical Landmark</h2>
 
 <!-- add content here -->
+<form method='POST' action='/landmarks/<%= @landmark.id %>'>
+  <input type='hidden' id='hidden' name="_method" value="patch">
+  Name: <input type='text' name='name' id='landmark[name]' placeholder='<%= @landmark.name %>'><br>
+  Year completed: <input type='text' name='year_completed' id='landmark[year_completed]' placeholder='<%= @landmark.year_completed %>'><br>
+  <input type='submit' id='Edit Landmark'>
+</form>
 
 <a class="button" href="/figures">Landmarks</a>
 <a class="button" href="/">Home</a>
