--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -2,8 +2,8 @@
 
 <!-- add content here -->
 <form method='POST' action='/landmarks/<%= @landmark.id %>'>
-  <input type='text' name='landmark_name' id='landmark[name]'><br>
-  <input type='text' name='landmark_year_completed' id='landmark[year_completed]'><br>
+  Name: <input type='text' name='landmark_name' id='landmark[name]'><br>
+  Year completed: <input type='text' name='landmark_year_completed' id='landmark[year_completed]'><br>
   <input type='submit' id='Create New Landmark'>
 </form>
 
