--- a/app/views/figures/show.erb
+++ b/app/views/figures/show.erb
@@ -7,5 +7,5 @@
   <%= landmark.name %><br>
 <% end %><br>
 
-<a class="button" href="/landmarks/<%= @landmark.id %>/edit">Edit Landmark</a>
+<a class="button" href="/figures/<%= @figure.id %>/edit">Edit Landmark</a>
 <a class="button" href="/landmarks">Landmarks</a>
