--- a/app/views/figures/new.erb
+++ b/app/views/figures/new.erb
@@ -17,5 +17,5 @@
 </form>
 
 
-<a class="button" href="/figures">Landmarks</a>
+<a class="button" href="/figures">Figures</a>
 <a class="button" href="/">Home</a>
