--- a/app/views/figures/edit.erb
+++ b/app/views/figures/edit.erb
@@ -10,7 +10,7 @@
   New title: <input type='text' name='title[name]' id='new_title'><br>
   Landmarks:<br>
   <% @landmarks.each do |landmark| %>
-    <input type='checkbox' name='figure[landmark_ids][]' value="<%= landmark.id %>" id='landmark_<%= landmark.id %>'><%= landmark.name %><br>
+    <input type='checkbox' name='figure[landmark_ids][]' value="<%= landmark.id %>" id='landmark_<%= landmark.id %>' <%='checked' if @figure.landmarks.include?(landmark) %>><%= landmark.name %><br>
   <% end %>
   New Landmark: <input type='text' name='landmark[name]' id='new_landmark'><br>
   <input type='submit' id='Create New Figure'>
