Automatically backed up by Learn

--- a/app/views/figures/edit.erb
+++ b/app/views/figures/edit.erb
@@ -5,7 +5,7 @@
   Name: <input type='text' name='figure[name]' id='figure_name'><br>
   Titles:<br>
   <% @titles.each do |title| %>
-    <input type='checkbox' name='figure[title_ids][]' value="<%= title.id %>" id='title_<%= title.id %>'><%= title.name %><br>
+    <input type='checkbox' name='figure[title_ids][]' value="<%= title.id %>" id='title_<%= title.id %>' <%= 'checked' if @figure.titles.include?(title) %>><%= title.name %><br>
   <% end %>
   New title: <input type='text' name='title[name]' id='new_title'><br>
   Landmarks:<br>
