Automatically backed up by Learn

--- a/app/views/figures/edit.erb
+++ b/app/views/figures/edit.erb
@@ -1,4 +1,4 @@
-<h2>Edit A Figure</h2>
+<h2>Edit <%= @figure.name %></h2>
 
 <!-- add content here -->
 <form method='POST' action='/figures/<%= @figure.id %>'>
