Automatically backed up by Learn

--- a/app/views/figures/edit.erb
+++ b/app/views/figures/edit.erb
@@ -13,7 +13,7 @@
     <input type='checkbox' name='figure[landmark_ids][]' value="<%= landmark.id %>" id='landmark_<%= landmark.id %>' <%='checked' if @figure.landmarks.include?(landmark) %>><%= landmark.name %><br>
   <% end %>
   New Landmark: <input type='text' name='landmark[name]' id='new_landmark'><br>
-  <input type='submit' id='Create New Figure'>
+  <input type='submit' id='Edit Figure'>
 </form>
 
 
